--- a/geekseek-api/pom.xml
+++ b/geekseek-api/pom.xml
@@ -1,21 +1,32 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>geekseek</groupId>
-    <artifactId>com.geekseek</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <groupId>geekseek-api</groupId>
-  <artifactId>geekseek-api</artifactId>
-  
-  <dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>geekseek</groupId>
+		<artifactId>com.geekseek</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<groupId>geekseek-api</groupId>
+	<artifactId>geekseek-api</artifactId>
+
+	<dependencies>
 
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.arquillian.junit</groupId>
+			<artifactId>arquillian-junit-container</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
