--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,6 @@
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<maven.compiler.source>1.7</maven.compiler.source>
 
-		<!-- Test -->
-		<version.junit>4.11</version.junit>
-
 		<!-- Plugin -->
 		<version.maven-compiler-plugin>3.1</version.maven-compiler-plugin>
 		<version.maven-ejb-plugin>2.3</version.maven-ejb-plugin>
@@ -33,6 +30,16 @@
 		<version.maven-war-plugin>2.4</version.maven-war-plugin>
 		<version.maven-eclipse-plugin>2.9</version.maven-eclipse-plugin>
 		<version.maven-jar-plugin>2.4</version.maven-jar-plugin>
+
+		<!-- Test -->
+		<version.junit>4.8.1</version.junit>
+		<version.arquillian>1.1.8.Final</version.arquillian>
+		<version.arquillian-weld-ee-embedded-1.1>1.0.0.CR3</version.arquillian-weld-ee-embedded-1.1>
+		<version.arquillian-weld-core>1.1.5.Final</version.arquillian-weld-core>
+		<version.arquillian-slf4j-simple>1.6.4</version.arquillian-slf4j-simple>
+
+		<!-- Test Plugin -->
+		<maven-surefire-plugin>2.17</maven-surefire-plugin>
 
 	</properties>
 
@@ -46,18 +53,6 @@
 				<version>${version.javaee-api}</version>
 				<scope>provided</scope>
 			</dependency>
-
-			<!-- end Plugins -->
-
-			<!-- Test -->
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>${version.junit}</version>
-				<scope>test</scope>
-			</dependency>
-
-			<!--end Test -->
 
 			<!-- Plugin -->
 			<dependency>
@@ -102,8 +97,44 @@
 				<scope>plugin</scope>
 			</dependency>
 
+			<!-- end Plugins -->
 
-			<!-- end Plugin -->
+			<!-- Test -->
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>${version.junit}</version>
+				<scope>test</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.jboss.arquillian</groupId>
+				<artifactId>arquillian-bom</artifactId>
+				<version>${version.arquillian}</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
+
+			<dependency>
+				<groupId>org.jboss.arquillian.container</groupId>
+				<artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
+				<version>${version.arquillian-weld-ee-embedded-1.1}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.weld</groupId>
+				<artifactId>weld-core</artifactId>
+				<version>${version.arquillian-weld-core}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-simple</artifactId>
+				<version>${version.arquillian-slf4j-simple}</version>
+				<scope>test</scope>
+			</dependency>
+
+			<!--end Test -->
 
 		</dependencies>
 
@@ -149,6 +180,13 @@
 					<version>${version.maven-jar-plugin}</version>
 				</plugin>
 
+				<!-- Test Plugin -->
+				<plugin>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${maven-surefire-plugin}</version>
+				</plugin>
+				<!-- Test Plugin -->
+
 			</plugins>
 		</pluginManagement>
 
@@ -157,10 +195,114 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-eclipse-plugin</artifactId>
 				<configuration>
-
 				</configuration>
 			</plugin>
 		</plugins>
 
 	</build>
+
+	<profiles>
+		<profile>
+			<id>arquillian-weld-ee-embedded</id>
+			<dependencies>
+				<dependency>
+					<groupId>org.jboss.arquillian.container</groupId>
+					<artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.weld</groupId>
+					<artifactId>weld-core</artifactId>
+
+				</dependency>
+				<dependency>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-simple</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+
+		<profile>
+			<id>arquillian-glassfish-embedded</id>
+			<dependencies>
+				<dependency>
+					<groupId>org.jboss.arquillian.container</groupId>
+					<artifactId>arquillian-glassfish-embedded-3.1</artifactId>
+					<version>1.0.0.CR3</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.glassfish.main.extras</groupId>
+					<artifactId>glassfish-embedded-all</artifactId>
+					<version>3.1.2</version>
+					<scope>provided</scope>
+				</dependency>
+			</dependencies>
+		</profile>
+
+		<profile>
+			<id>arquillian-jbossas-managed</id>
+			<dependencies>
+
+				<dependency>
+					<groupId>org.jboss.as</groupId>
+					<artifactId>jboss-as-arquillian-container-managed</artifactId>
+					<version>7.1.1.Final</version>
+					<scope>test</scope>
+				</dependency>
+
+				<dependency>
+					<groupId>org.jboss.arquillian.protocol</groupId>
+					<artifactId>arquillian-protocol-servlet</artifactId>
+					<scope>test</scope>
+				</dependency>
+
+				<dependency>
+					<groupId>org.jboss.weld</groupId>
+					<artifactId>weld-core</artifactId>
+
+				</dependency>
+				<dependency>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-simple</artifactId>
+				</dependency>
+
+			</dependencies>
+
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<systemPropertyVariables>
+								<arquillian.launch>jbossas_managed</arquillian.launch>
+							</systemPropertyVariables>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+
+		</profile>
+
+		<profile>
+			<id>arquillian-wildfy-embedded</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.wildfly</groupId>
+					<artifactId>wildfly-arquillian-container-embedded</artifactId>
+					<version>8.2.0.Final</version>
+				</dependency>
+				<dependency>
+					<groupId>org.wildfly</groupId>
+					<artifactId>wildfly-embedded</artifactId>
+					<version>8.2.0.Final</version>
+				</dependency>
+			</dependencies>
+		</profile>
+
+	</profiles>
+
 </project>
