--- a/geekseek-ejb/pom.xml
+++ b/geekseek-ejb/pom.xml
@@ -1,15 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>geekseek</groupId>
-    <artifactId>com.geekseek</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <groupId>geekseek-ejb</groupId>
-  <artifactId>geekseek-ejb</artifactId>
-  <packaging>ejb</packaging>
-  
-  <dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>geekseek</groupId>
+		<artifactId>com.geekseek</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<groupId>geekseek-ejb</groupId>
+	<artifactId>geekseek-ejb</artifactId>
+	<packaging>ejb</packaging>
+
+	<dependencies>
 
 
 		<dependency>
@@ -22,7 +22,7 @@
 			<artifactId>geekseek-api</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-  </dependencies>
+	</dependencies>
 
 	<build>
 
