--- a/geekseek-api/pom.xml
+++ b/geekseek-api/pom.xml
@@ -14,7 +14,7 @@
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
-	
+
 		</dependency>
 
 		<dependency>
@@ -25,6 +25,13 @@
 		<dependency>
 			<groupId>org.jboss.arquillian.junit</groupId>
 			<artifactId>arquillian-junit-container</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-jpamodelgen</artifactId>
+			<version>1.2.0.Final</version>
+			<scope>provided</scope>
 		</dependency>
 
 	</dependencies>
